# mib/resource/users.py
@@ -1,10 +1,12 @@
 import json
-from mib.db_model.user_db import User
+from mib.db_model.user_db import User, Filter_list
 from flask import jsonify, request
 import datetime
 from datetime import datetime
 from mib import db
 from datetime import date
+from werkzeug.security import check_password_hash, generate_password_hash
+
 def check_none(**kwargs):
     for name, arg in zip(kwargs.keys(), kwargs.values()):
         if arg is None:
@@ -107,3 +109,87 @@ def create_user():
     response["user"] = user.serialize()
 
     return jsonify(response), 201
+
+def profile_filter(payload):
+   
+    user_filter_list = db.session.query(Filter_list).filter(Filter_list.user_id==payload['user_id'])
+    response = {
+        'response': 'info sent',
+        'filter': ''
+    }
+    if user_filter_list.first() is not None:
+        response['filter'] = user_filter_list.first().list
+    return jsonify(response), 201
+
+            
+def change_filter(payload):
+
+    post_data = request.get_json()
+
+    print("change filter branch")
+    new_filter = Filter_list()
+    new_filter.list = request.post_data.get('filter')
+    new_filter.user_id = payload['user_id']
+    user_filter_list = db.session.query(Filter_list).filter(Filter_list.user_id==payload['user_id'])
+    if user_filter_list.first() is not None:
+        db.session.query(Filter_list).filter(Filter_list.user_id==payload['user_id']).delete()
+        db.session.add(new_filter)
+    else:
+        db.session.add(new_filter)
+    db.session.commit()
+    response = {
+        'response': 'filter updated',
+        'filter': request.post_data.get('filter')
+    }
+    return jsonify(response), 203
+
+
+def change_info(payload):
+   
+    post_data = request.get_json()
+    
+    print("change info branch")
+    user_q = User.query.filter(User.email == str(payload['email'])).first()
+    if check_password_hash(user_q.password, request.post_data.get('old_password')) : #check if the password that is put in the form is corrected
+        user_to_modify = db.session.query(User).filter(User.id==payload['user_id']).first()
+        user_to_modify.firstname = request.post_data.get('firstname')
+        user_to_modify.lastname = request.post_data.get('surname')
+        user_to_modify.date_of_birth = datetime.datetime.fromisoformat(request.post_data.get('birthday'))
+        user_to_modify.location = request.post_data.get('location')
+        if request.post_data.get('new_password'):
+            user_to_modify.password = generate_password_hash(request.post_data.get('new_password'))
+        db.session.commit()
+        print("info changed")
+        user_filter_list = db.session.query(Filter_list).filter(Filter_list.user_id==payload['user_id'])
+        if user_filter_list.first() is not None:
+            response = {
+                'response': 'info changed',
+                'filter': user_filter_list.first().list
+            }
+        else:
+            response = {
+                'response': 'info changed',
+                'filter': ''
+            }
+        return jsonify(response), 201
+    else:
+        print("old password incorrect")
+        user_filter_list = db.session.query(Filter_list).filter(Filter_list.user_id==payload['user_id'])
+        if user_filter_list.first() is not None:
+            response = {
+                'response': 'info not changed',
+                'filter': user_filter_list.first().list
+            }
+        else:
+            response = {
+                'response': 'info not changed',
+                'filter': ''
+            }
+        return jsonify(response), 202
+            
+     
+               
+        
+     
+               
+        
